test/files/valid/include2.fbs
include "include1.fbs";
