test/files/invalid/native_include.fbs
native_include "I_like_C++.hpp";
